--- a/ShoppingCartProject/index.html
+++ b/ShoppingCartProject/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Shopping Cart!</title>
-</head>
-<body>
-	
-	<form action="SearchResult.php" method="post">
+    <head>
+        <title>TODO supply a title</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        	<form action="SearchResult.php" method="post">
 		<div>
 		<input type="text" name="searchCriteria"><br>
 		<input type="submit" >
 		</div>
-	</form>
-
-
-</body>
+                </form>
+    </body>
 </html>
