--- a/ShoppingCartProject/index.html
+++ b/ShoppingCartProject/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>Project Home</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style/style.css">
     </head>
     <body>
         <div id="header">
@@ -21,7 +21,7 @@ and open the template in the editor.
 
         <div id="section">
             
-            <form action="SearchResult.php" method="get">
+            <form action="gui/SearchResult.php" method="get">
 		<div>
 		<input type="text" name="searchCriteria"><br>
 		<input type="submit" >
