--- a/ShoppingCartProject/index.html
+++ b/ShoppingCartProject/index.html
@@ -17,6 +17,7 @@ and open the template in the editor.
         </div>
         
         <div id="nav">
+            <a href="gui/ManageShoppingCart.php">Manage Shopping Cart</a>
         </div>
 
         <div id="section">
