New! -- more and more design features and cosmetic changes.

--- a/ShoppingCartProject/index.html
+++ b/ShoppingCartProject/index.html
@@ -12,10 +12,10 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="style/style.css">
     </head>
     <body>
-        <div id="header">
+        <div id="header" class="">
             <h1>Shop-a-ton!</h1>
         </div>
-        
+        <div class="container">
         <div id="nav">    
         <ul>
           <li><a href="#home">Home</a></li>
@@ -36,6 +36,6 @@ and open the template in the editor.
         <div id="footer">
         Copyright © 2015, Leonardo Farinha, Robert Krall
         </div>
-
+        </div>
     </body>
 </html>
